# Digital-Twin

./: README.md  csv_to_3d_plot.py  csv_to_3d_plot_pandas.py
bagfiles/drone_flight_setpoint/: .~lock._slash_vrpn_client_node_slash_Drone_A_slash_pose.csv#  _slash_diagnostics.csv  _slash_mavlink_slash_from.csv  _slash_mavros_slash_altitude.csv  _slash_mavros_slash_battery.csv  _slash_mavros_slash_extended_state.csv  _slash_mavros_slash_global_position_slash_raw_slash_fix.csv  _slash_mavros_slash_global_position_slash_raw_slash_gps_vel.csv  _slash_mavros_slash_imu_slash_atm_pressure.csv  _slash_mavros_slash_imu_slash_data.csv  _slash_mavros_slash_imu_slash_data_raw.csv  _slash_mavros_slash_imu_slash_mag.csv  _slash_mavros_slash_imu_slash_temperature.csv  _slash_mavros_slash_local_position_slash_odom.csv  _slash_mavros_slash_local_position_slash_pose.csv  _slash_mavros_slash_local_position_slash_velocity.csv  _slash_mavros_slash_mission_slash_waypoints.csv  _slash_mavros_slash_mocap_slash_pose.csv  _slash_mavros_slash_rc_slash_in.csv  _slash_mavros_slash_rc_slash_out.csv  _slash_mavros_slash_setpoint_position_slash_local.csv  _slash_mavros_slash_setpoint_raw_slash_target_attitude.csv  _slash_mavros_slash_state.csv  (+10 more)
drone_mocap/: README.md  package.xml
drone_mocap/launch/: drone_mocap.launch
drone_mocap/scripts/: px4_offboard_python.py
drone_mocap/src/: 404warehouse_offboard_example.cpp  offb_node.cpp
images/: drone_flight_position_video.wmv
mocap feedback and setpoint/: CMakeLists.txt  README.md
scripts/: px4_offboard_python.py
src/: offb_node.cpp
