<?xml version="1.0"?>
<package format="2">
  <name>drone_mocap</name>
  <version>0.1.0</version>
  <description>Autonomously navigate Intel Aero drone using Optitrack motioncapture system</description>

  <maintainer email="stensrudmathias@gmail.com">Mathias Stensrud</maintainer>
  <license>BSD</license>
  <author email="stensrudmathias@gmail.com">Mathias Stensrud</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
</package>
